name:                infinite-state-synthesis
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base
    , containers
    , process

  exposed-modules:
      RPGSolve.Attractor
    , RPGSolve.Config
    , RPGSolve.Solving 
    , RPGSolve.SMT
    , RPGSolve.SymbolicState
    , RPG
    , FOL
    , SMTLib.Lexer
    , SMTLib.Parser
    , SMTLib.Writer
    , Config
    , Variables
 
  other-modules:
      RPGSolve.CFG
    , RPGSolve.LemmaFinding
    , RPGSolve.Logging
    , RPGSolve.Heuristics
    , RPGS.Game
    , RPGS.Parser
    , RPGS.Writer
    , SMT
    , Utils.Extra
    , Utils.Logging
    , Utils.IntBijection
    , Utils.OpenList
  
  hs-source-dirs:
      src/lib
  
  default-language:
    Haskell2010

executable rpgsolve

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , infinite-state-synthesis

  hs-source-dirs:
    src/tools/solve

  default-language:
    Haskell2010

executable rpgcross

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , containers
    , infinite-state-synthesis

  hs-source-dirs:
    src/tools/cross

  default-language:
    Haskell2010


executable rpgencode

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
      MuCLP
    , TSLT

  build-depends:
      base
    , containers
    , infinite-state-synthesis

  hs-source-dirs:
    src/tools/encode

  default-language:
    Haskell2010

executable rpgprint

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , infinite-state-synthesis

  hs-source-dirs:
    src/tools/print

  default-language:
    Haskell2010


