name:                rpgsolve
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base
    , containers
    , process
    , folhs
    , rpglib

  exposed-modules:
      RPGSolve.Config
    , RPGSolve.Solving 
    , RPGSolve.SMT

  other-modules:
      RPGSolve.LemmaFinding
    , RPGSolve.Logging
    , RPGSolve.Heuristics
    , OpenList
  
  hs-source-dirs:
      src/lib
  
  default-language:
    Haskell2010

executable rpgsolve

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , rpglib
    , rpgsolve

  hs-source-dirs:
    src/tools/solve

  default-language:
    Haskell2010


